--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
         .attribution {
-            font-size: 13px;
+            font-size: 14px;
             text-align: center;
             color: white;
+            position: absolute;
+            bottom: 10px;
         }
 
         .attribution a {
@@ -95,7 +97,7 @@
             </g>
         </svg>
 
-        <p>You selected <span class="texte"></span> out of 5</p> 
+        <p>You selected <span class="text"></span> out of 5</p> 
 
         <p>Thank you!</p> 
 
